tests/compile_fail/missing_file.rs
fn main() {
    let _: &str = include_docs::module!("nonesuch.rs");
}
