tests/compile_fail/missing_file.stderr
error: Failed to read "$DIR/tests/compile_fail/nonesuch.rs": No such file or directory (os error 2)
 --> tests/compile_fail/missing_file.rs:2:41
  |
2 |     let _: &str = include_docs::module!("nonesuch.rs");
  |                                         ^^^^^^^^^^^^^
